Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3326

proxy.config.http.send_http11_requests not applied when hostdb lookup is not performed

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 5.2.0
    • 5.3.0
    • Core, HTTP
    • None

    Description

      The setting proxy.config.http.send_http11_requests determines what http version is used in sending outgoing requests. However, this setting is not applied when dns/hostdb lookup is skipped (for e.g, when using the TS API TSHttpTxnServerAddrSet). This causes problems since the default version in the code used is v0.9 at the moment. See the jira TS-3327 that proposes to change the default to an invalid value (e.g 0.0) in 6.0 and TS-3328 that tracks the need for a new/modified TS API.

      Attachments

        Issue Links

          Activity

            People

              sudheerv Sudheer Vinukonda
              sudheerv Sudheer Vinukonda
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: