[TS-3326]: proxy.config.http.send_http11_requests not applied when hostdb lookup is not performed